--- a/index.html
+++ b/index.html
@@ -227,6 +227,52 @@
       </div>
     </div>
 
+    <div class="product-card" onclick="toggleDetail(this)">
+      <div class="product-title">PT PRIBADI RIZZ</div>
+      <div class="price">Mulai Rp100.000</div>
+      <div class="product-detail">
+𝗙𝗥𝗘𝗘 𝗣𝗧 𝗦𝗖 𝗔𝗟𝗪𝗔𝗬𝗦 𝗣𝗥𝗜𝗠𝗘 
+𝗦𝗘𝗟𝗔𝗟𝗨 𝗗𝗔𝗣𝗘𝗧 𝗙𝗨𝗡𝗖
+𝗦𝗘𝗟𝗔𝗟𝗨 𝗗𝗔𝗣𝗘𝗧 𝗕𝗔𝗦𝗘
+𝗗𝗜 𝗔𝗝𝗔𝗥𝗜𝗡 𝗔𝗗𝗗 𝗙𝗨𝗡𝗖
+𝗙𝗥𝗘𝗘 𝗦𝗖 𝗔𝗗𝗗𝗧𝗢𝗞𝗘𝗡
+𝗗𝗜 𝗞𝗔𝗦𝗜𝗛 𝗕𝗜𝗠𝗕𝗜𝗡𝗚𝗔𝗡 
+𝗙𝗨𝗟𝗟 𝗗𝗢𝗥𝗢𝗡𝗚𝗔𝗡 
+𝗙𝗥𝗘𝗘 𝗔𝗗𝗠𝗜𝗡 𝗖𝗛 𝗧𝗘𝗟𝗘
+𝗗𝗜 𝗞𝗔𝗦𝗜𝗛 𝗕𝗨𝗬𝗘𝗥 [ 𝗞𝗔𝗟𝗢 𝗚𝗪 𝗟𝗔𝗚𝗜 𝗦𝗜𝗕𝗨𝗞 ]
+𝗙𝗥𝗘𝗘 𝗥𝗘𝗦𝗘𝗟𝗟𝗘𝗥 𝗣𝗔𝗡𝗘𝗟
+𝗔𝗗𝗠𝗜𝗡 𝗥𝗢𝗢𝗠 𝗣𝗨𝗕𝗟𝗜𝗖 𝗚𝗪 
+𝗙𝗥𝗘𝗘 𝗔𝗞𝗦𝗘𝗦 𝗕𝗢𝗧 𝗝𝗔𝗦𝗛𝗘𝗥 𝗚𝗪
+𝗗𝗜 𝗕𝗔𝗡𝗧𝗨 𝗡𝗔𝗜𝗞 𝗡𝗔𝗠𝗔
+𝗗𝗜 𝗣𝗥𝗢𝗠𝗢𝗦𝗜 𝗦𝗘𝗧𝗜𝗔𝗣 𝗛𝗔𝗥𝗜
+      </div>
+    </div>
+
+    <div class="product-card" onclick="toggleDetail(this)">
+      <div class="product-title">OWNER PRIBADI RIZZ</div>
+      <div class="price">Rp200.000</div>
+      <div class="product-detail">
+𝗙𝗥𝗘𝗘 𝗦𝗩𝗜𝗣 𝗦𝗖 𝗔𝗟𝗪𝗔𝗬𝗦 𝗣𝗥𝗜𝗠𝗘
+𝗦𝗘𝗟𝗔𝗟𝗨 𝗗𝗔𝗣𝗘𝗧 𝗙𝗨𝗡𝗖 𝗧𝗘𝗟𝗘/𝗪𝗔
+𝗦𝗘𝗟𝗔𝗟𝗨 𝗗𝗔𝗣𝗘𝗧 𝗕𝗔𝗦𝗘 𝗧𝗘𝗟𝗘/𝗪𝗔
+𝗗𝗜 𝗔𝗝𝗔𝗥𝗜𝗡 𝗔𝗗𝗗 𝗙𝗨𝗡𝗖
+𝗙𝗥𝗘𝗘 𝗦𝗖 𝗔𝗗𝗗𝗧𝗢𝗞𝗘𝗡
+𝗗𝗜 𝗞𝗔𝗦𝗜𝗛 𝗕𝗜𝗠𝗕𝗜𝗡𝗚𝗔𝗡 
+𝗙𝗨𝗟𝗟 𝗗𝗢𝗥𝗢𝗡𝗚𝗔𝗡 
+𝗙𝗥𝗘𝗘 𝗔𝗗𝗠𝗜𝗡 𝗖𝗛 𝗧𝗘𝗟𝗘/𝗪𝗔
+𝗗𝗜 𝗞𝗔𝗦𝗜𝗛 𝗕𝗨𝗬𝗘𝗥 [ 𝗞𝗔𝗟𝗢 𝗚𝗪 𝗟𝗔𝗚𝗜 𝗦𝗜𝗕𝗨𝗞 ]
+𝗙𝗥𝗘𝗘 𝗦𝗖 𝗡𝗢 𝗘𝗡𝗖 𝗔𝗟𝗪𝗔𝗬𝗦 𝗣𝗥𝗜𝗠𝗘 [ 𝗣𝗘𝗥𝗠𝗔𝗡𝗘𝗡 ]
+𝗡𝗔𝗠𝗔 𝗟𝗨 𝗠𝗔𝗦𝗨𝗞 𝗧𝗛𝗔𝗡𝗞𝗦 𝗧𝗢 𝗦𝗖 𝗔𝗟𝗪𝗔𝗬𝗦 𝗣𝗥𝗜𝗠𝗘
+𝗙𝗥𝗘𝗘 𝗥𝗘𝗦𝗘𝗟𝗟𝗘𝗥 𝗣𝗔𝗡𝗘𝗟
+𝗙𝗥𝗘𝗘 𝗦𝗖 𝗖𝗣𝗔𝗡𝗘𝗟 𝗡𝗢 𝗘𝗡𝗖 𝗩𝗜𝗔 𝗧𝗘𝗟𝗘
+𝗔𝗗𝗠𝗜𝗡 𝗥𝗢𝗢𝗠 𝗣𝗨𝗕𝗟𝗜𝗖 𝗚𝗪 
+𝗙𝗥𝗘𝗘 𝗨𝗕𝗢𝗧 𝗣𝗘𝗥𝗠𝗔𝗡𝗘𝗡
+𝗗𝗜 𝗕𝗔𝗡𝗧𝗨 𝗡𝗔𝗜𝗞 𝗡𝗔𝗠𝗔
+𝗗𝗜 𝗣𝗥𝗢𝗠𝗢𝗦𝗜 𝗦𝗘𝗧𝗜𝗔𝗣 𝗛𝗔𝗥𝗜
+𝗙𝗥𝗘𝗘 𝗦𝗖 𝗕𝗢𝗧 𝗝𝗔𝗦𝗛𝗘𝗥 𝗚𝗪
+      </div>
+    </div>
+
   </div>
 
   <script>
